--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*fuentes desde google fonts*/
 @import url('https://fonts.googleapis.com/css?family=Anton|Gugi|Lato|Roboto|Sofia&display=swap');
 
+
 :root{
     --light-gray:#2b3032a1;
     --primary-color: #35587F;
@@ -75,4 +76,30 @@ header .site-title{
 
 .navbar-nav .basket-icon{
     margin-right: 6.5rem !important;
+}
+
+/*slider 1*/
+
+.site-slider{
+    position: relative;
+}
+
+
+.position-top{
+    position: absolute;
+    top: 50%;
+}
+
+.site-slider .slider-btn .prev,
+.site-slider .slider-btn .next {
+    background-color: var(--primary-color);
+    padding: 1rem 1.5rem;
+    border-radius: 10rem;
+    color: white;
+    margin: 0 1rem;
+    opacity: 0;
+}
+
+.right-0{
+    right: 0;
 }
