--- a/css/style.css
+++ b/css/style.css
@@ -98,8 +98,49 @@ header .site-title{
     color: white;
     margin: 0 1rem;
     opacity: 0;
+    transition: opacity 1s case;
+   
 }
+
+.site-slider:hover .slider-btn .prev,
+.site-slider .slider-btn .next{
+    opacity: 1;
+
+} 
 
 .right-0{
     right: 0;
+}
+
+/*botones de slick*/
+
+.slick-dots{
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 1rem 0;
+    list-style-type: none;
+    position: absolute;
+    bottom: 0;
+    right: 50%;
+}
+
+.slick-dots li{
+    margin: 0 0.6rem;
+}
+
+.slick-dots button{
+    display: block;
+    width: 0.5rem;
+    height: 0.5rem;
+    padding: 0;
+    border: none;
+    background-color: white;
+    text-indent: -99999px;
+    border-radius: 100%;
+}
+
+.slick-dots.slick-active button{
+    transform: scale(2.5);
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.205);
 }
