--- a/css/login.css
+++ b/css/login.css
@@ -11,7 +11,7 @@ body {
     width: 320px;
     height: 420px;
     background: #35587F;
-    color: #fff;
+    color: white;
     top: 50%;
     left: 50%;
     position: absolute;
@@ -78,9 +78,9 @@ body {
     text-decoration: none;
     font-size: 12px;
     line-height: 20px;
-    color: darkgrey;
+    color: white;
   }
   
   .login-box a:hover {
-    color: #fff;
+    color: white;
   }
