--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,7 @@ header .site-title{
     font-family: var(--gugi);
 }
 
-.container . .features p{
+.container .features p{
     padding: 0.5% 25%;
     font-size: 0.9em;
 
@@ -207,7 +207,13 @@ header .site-title{
 
 .site-slider-three .product{
     height: 100%;
+    padding: 0em;
+}
+
+.site-slider-three .cart-details {
+    margin: 0.5rem;
     padding: 0 2rem;
+
 }
 
 .rating i{
@@ -249,5 +255,22 @@ footer .follow-us div{
     width: 33%;
     height: 8rem;
     background: lightblue;
+
+}
+
+/**Slider cuatro**/
+.site-slider-four {
+    position: relative;
+    margin-top: 3rem;
+}
+
+.slider-four{
+    padding: 0 0.4rem;
+    
+}
+
+.slider-four .product img{
+    width: 50%;
+    border: 1px solid var(--border);
 
 }
